update reset button issue, added object check to make sure user answeres at least one question

--- a/src/app/prefs/questionForm.tpl.html
+++ b/src/app/prefs/questionForm.tpl.html
@@ -55,7 +55,7 @@
 		</article>
 	</section>
 	
-	<button  class="formReset" ng-click="reset(filterQuestion)"><i class="fa fa-refresh"></i> Reset</button>
+	<button  class="formReset" ng-click="reset()"><i class="fa fa-refresh"></i> Reset</button>
 
 	<button class="formSubmit" ng-click="update(user)"><i class="fa fa-floppy-o"></i> Save</button>
 
